<resources>
    <string name="app_name">mobileApp3</string>
    <string name="text_name">Имя:</string>
    <string name="text_age">Возраст:</string>
    <string name="text_job">Специализация:</string>
    <string name="text_photo">Фото</string>
    <string name="text_projects">Проекты:</string>
    <string name="text_achievements">Достижения:</string>
    <string name="photo_profile_desc">Какое-то описание фото</string>
    <string name="photo_photo_desc">Какие то описания фотографий</string>
    <string name="photo_projects_desc">Какие то описания проектов</string>
    <string name="photo_achievements_desc">Какие то описания достижений</string>
    <string name="text_current_name">Никита</string>
    <string name="text_current_age">22</string>
    <string name="text_current_job">Android-разработчик</string>
    <string name="text_music">Музыка</string>
</resources>